--- a/index.html
+++ b/index.html
@@ -4,7 +4,122 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
-    <link rel="stylesheet" href="style.css">
+    <style>
+        /* CSS untuk Dashboard */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+        }
+
+        .container {
+            display: flex;
+            width: 100%;
+        }
+
+        /* Sidebar */
+        .sidebar {
+            width: 250px;
+            background-color: #333;
+            color: white;
+            padding: 20px;
+            box-sizing: border-box;
+        }
+
+        .sidebar h2 {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        .sidebar ul {
+            list-style: none;
+            padding: 0;
+        }
+
+        .sidebar ul li {
+            margin: 15px 0;
+        }
+
+        .sidebar ul li a {
+            color: white;
+            text-decoration: none;
+            display: block;
+            padding: 10px;
+            background-color: #444;
+            border-radius: 5px;
+            text-align: center;
+        }
+
+        .sidebar ul li a:hover {
+            background-color: #555;
+        }
+
+        /* Main Content */
+        .main-content {
+            flex: 1;
+            padding: 20px;
+            box-sizing: border-box;
+        }
+
+        header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px;
+            background-color: #f4f4f4;
+            border-bottom: 1px solid #ddd;
+        }
+
+        header h1 {
+            margin: 0;
+        }
+
+        header button {
+            background-color: #333;
+            color: white;
+            border: none;
+            padding: 10px;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        header button:hover {
+            background-color: #444;
+        }
+
+        .content {
+            margin-top: 20px;
+        }
+
+        .content h2 {
+            margin-bottom: 20px;
+        }
+
+        /* Tabel Penjualan */
+        .sales-table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
+
+        .sales-table th, .sales-table td {
+            border: 1px solid #ddd;
+            padding: 10px;
+            text-align: left;
+        }
+
+        .sales-table th {
+            background-color: #f4f4f4;
+        }
+
+        /* Chart */
+        canvas {
+            display: block;
+            margin: 0 auto;
+            max-width: 100%;
+        }
+    </style>
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.min.css">
 </head>
 <body>
@@ -15,7 +130,7 @@
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#analytics">Analytics</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li> 
+                <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="#profile">Profile</a></li>
                 <li><a href="#logout">Logout</a></li>
             </ul>
@@ -37,31 +152,20 @@
 
             <!-- Analytics Content -->
             <section class="content" id="analytics">
-                <h2>Data Penjualan (Januari - Desember)</h2>
+                <h2>Data Penjualan Tahunan</h2>
                 <canvas id="salesChart" width="400" height="200"></canvas>
                 
-                <h2>Data Pendapatan Penjualan Buku</h2>
+                <h2>Data Total Pendapatan Penjualan Buku</h2>
                 <table class="sales-table" id="sales-table">
                     <thead>
                         <tr>
-                            <th>Bulan</th>
-                            <th>Penjualan</th>
-                            <th>Pendapatan</th>
+                            <th>Tahun</th>
+                            <th>Total Penjualan</th>
+                            <th>Total Pendapatan</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr><td>Januari</td><td>120</td><td>Rp 12.000.000</td></tr>
-                        <tr><td>Februari</td><td>150</td><td>Rp 15.000.000</td></tr>
-                        <tr><td>Maret</td><td>180</td><td>Rp 18.000.000</td></tr>
-                        <tr><td>April</td><td>200</td><td>Rp 20.000.000</td></tr>
-                        <tr><td>Mei</td><td>160</td><td>Rp 16.000.000</td></tr>
-                        <tr><td>Juni</td><td>140</td><td>Rp 14.000.000</td></tr>
-                        <tr><td>Juli</td><td>210</td><td>Rp 21.000.000</td></tr>
-                        <tr><td>Agustus</td><td>190</td><td>Rp 19.000.000</td></tr>
-                        <tr><td>September</td><td>230</td><td>Rp 23.000.000</td></tr>
-                        <tr><td>Oktober</td><td>250</td><td>Rp 25.000.000</td></tr>
-                        <tr><td>November</td><td>220</td><td>Rp 22.000.000</td></tr>
-                        <tr><td>Desember</td><td>300</td><td>Rp 30.000.000</td></tr>
+                        <tr><td>2024</td><td>2350</td><td>Rp 235.000.000</td></tr>
                     </tbody>
                 </table>
             </section>
@@ -83,10 +187,10 @@
         var salesChart = new Chart(ctx, {
             type: 'bar',
             data: {
-                labels: ['Januari', 'Februari', 'Maret', 'April', 'Mei', 'Juni', 'Juli', 'Agustus', 'September', 'Oktober', 'November', 'Desember'],
+                labels: ['2024'],
                 datasets: [{
-                    label: 'Penjualan',
-                    data: [120, 150, 180, 200, 160, 140, 210, 190, 230, 250, 220, 300],
+                    label: 'Total Penjualan',
+                    data: [2350],
                     backgroundColor: 'rgba(75, 192, 192, 0.6)',
                     borderColor: 'rgba(75, 192, 192, 1)',
                     borderWidth: 1
