--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             margin: 0;
             padding: 0;
             display: flex;
+            height: 100vh;
         }
 
         .container {
@@ -25,6 +26,7 @@
             color: white;
             padding: 20px;
             box-sizing: border-box;
+            overflow-y: auto;
         }
 
         .sidebar h2 {
@@ -60,6 +62,7 @@
             flex: 1;
             padding: 20px;
             box-sizing: border-box;
+            overflow-y: auto;
         }
 
         header {
@@ -144,12 +147,6 @@
                 <button id="toggle-sidebar">☰</button>
             </header>
 
-            <!-- Home Content -->
-            <section class="content" id="home">
-                <h2>Welcome My Dashboard</h2>
-                <p></p>
-            </section>
-
             <!-- Analytics Content -->
             <section class="content" id="analytics">
                 <h2>Data Penjualan Tahunan</h2>
@@ -165,7 +162,18 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr><td>2024</td><td>2350</td><td>Rp 235.000.000</td></tr>
+                        <tr><td>2013</td><td>1500</td><td>Rp 150.000.000</td></tr>
+                        <tr><td>2014</td><td>1600</td><td>Rp 160.000.000</td></tr>
+                        <tr><td>2015</td><td>1700</td><td>Rp 170.000.000</td></tr>
+                        <tr><td>2016</td><td>1800</td><td>Rp 180.000.000</td></tr>
+                        <tr><td>2017</td><td>1900</td><td>Rp 190.000.000</td></tr>
+                        <tr><td>2018</td><td>2000</td><td>Rp 200.000.000</td></tr>
+                        <tr><td>2019</td><td>2100</td><td>Rp 210.000.000</td></tr>
+                        <tr><td>2020</td><td>2200</td><td>Rp 220.000.000</td></tr>
+                        <tr><td>2021</td><td>2300</td><td>Rp 230.000.000</td></tr>
+                        <tr><td>2022</td><td>2400</td><td>Rp 240.000.000</td></tr>
+                        <tr><td>2023</td><td>2500</td><td>Rp 250.000.000</td></tr>
+                        <tr><td>2024</td><td>2600</td><td>Rp 260.000.000</td></tr>
                     </tbody>
                 </table>
             </section>
@@ -183,28 +191,30 @@
         });
 
         // Konfigurasi Chart.js untuk Menampilkan Grafik Penjualan
-        var ctx = document.getElementById('salesChart').getContext('2d');
-        var salesChart = new Chart(ctx, {
-            type: 'bar',
-            data: {
-                labels: ['2024'],
-                datasets: [{
-                    label: 'Total Penjualan',
-                    data: [2350],
-                    backgroundColor: 'rgba(75, 192, 192, 0.6)',
-                    borderColor: 'rgba(75, 192, 192, 1)',
-                    borderWidth: 1
-                }]
-            },
-            options: {
-                responsive: true,
-                scales: {
-                    y: {
-                        beginAtZero: true
+        var ctx = document.getElementById('salesChart');
+        if (ctx) {
+            var salesChart = new Chart(ctx.getContext('2d'), {
+                type: 'bar',
+                data: {
+                    labels: ['2013', '2014', '2015', '2016', '2017', '2018', '2019', '2020', '2021', '2022', '2023', '2024'],
+                    datasets: [{
+                        label: 'Total Penjualan',
+                        data: [1500, 1600, 1700, 1800, 1900, 2000, 2100, 2200, 2300, 2400, 2500, 2600],
+                        backgroundColor: 'rgba(75, 192, 192, 0.6)',
+                        borderColor: 'rgba(75, 192, 192, 1)',
+                        borderWidth: 1
+                    }]
+                },
+                options: {
+                    responsive: true,
+                    scales: {
+                        y: {
+                            beginAtZero: true
+                        }
                     }
                 }
-            }
-        });
+            });
+        }
     </script>
 </body>
 </html>
