--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#analytics">Analytics</a></li>
-                <li><a href="https://inatokan.github.io/Portfolio/">Portfolio</a></li>
+                <li><a href="https://inatokan.github.io/Nuraina/">Portfolio</a></li>
                 <li><a href="#profile">Profile</a></li>
                 <li><a href="#logout">Logout</a></li>
             </ul>
